Removed all temp/perm rate modification logic out of EngineBuffer and into RateControl, which is analogous to LoopingControl. In order to keep EngineBuffer clear, readable, and maintainable -- I think we need to compartmentalize the features by storing their state / logic in these *Control classes.
Also removed some extraneous old looping junk from EngineBuffer.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -309,6 +309,7 @@ sources = Split("""
                 engine/enginefilterbutterworth8.cpp
                 engine/enginexfader.cpp
 
+                engine/ratecontrol.cpp
                 engine/loopingcontrol.cpp
                 
                 analyserqueue.cpp
