--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -309,6 +309,7 @@ sources = Split("""
                 engine/enginefilterbutterworth8.cpp
                 engine/enginexfader.cpp
 
+                engine/enginecontrol.cpp
                 engine/ratecontrol.cpp
                 engine/loopingcontrol.cpp
                 
