Removed all BPM-related stuff from EngineBuffer and put it in BpmControl.
Also, removed some more junk from EngineBuffer.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -312,6 +312,7 @@ sources = Split("""
                 engine/enginecontrol.cpp
                 engine/ratecontrol.cpp
                 engine/loopingcontrol.cpp
+                engine/bpmcontrol.cpp
                 
                 analyserqueue.cpp
 		analyserwavesummary.cpp
