- Added '2008' in the MSVS license - Changed NSI script to pull from dist/ instead of res/ - Fixed msvcdebug check in SConscript

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -1462,7 +1462,7 @@ def BuildRelease(target, source, env):
 	print
 	print "You have built version ", env['MIXXX_VERSION']
 	print
-	if flags_msvcdebug>0:
+	if int(flags_msvcdebug):
 		print "YOU ARE ABOUT TO PACKAGE A DEBUG BUILD!!"
 		print
 	print "Binary has size ",
