* Added RhythmboxTrackModel, which is an example of how to add other track sources. Click the Cheeseburger text...

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -380,6 +380,7 @@ sources = Split("""
                 tracksourcesmodel.cpp
                 librarytablemodel.cpp
                 browsetablemodel.cpp
+                rhythmboxtrackmodel.cpp
               
                 xmlparse.cpp
                 trackimporter.cpp
