More changes than you can shake a stick at, all of them in the name of integrating RhythmBox, mostly as an excercise.
  * Added RhythmboxPlaylistModel which handles all the playlists in one
    instance. All this through the power of shoddy, unfinished magic.
  * Added rhythmboxPlaylistmodel.cpp to SConscript.
  * Instanciate RhythmboxPlaylistModel in MixxxView::MixxxView()
  * Add Signals and Slots for the Playlists
  * Dynamically add QStandardItem's to the sidebar for each RB Playlist

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -381,6 +381,7 @@ sources = Split("""
                 librarytablemodel.cpp
                 browsetablemodel.cpp
                 rhythmboxtrackmodel.cpp
+                rhythmboxplaylistmodel.cpp
               
                 xmlparse.cpp
                 trackimporter.cpp
