Adding SidebarModel, LibraryFeature, and PlaylistFeature. PlaylistFeature is just an example use of the LibraryFeature usefulness, so don't take too much offense to it :P. To try it out, change the if(false) in mixxxview.cpp

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -381,6 +381,9 @@ sources = Split("""
                 librarytablemodel.cpp
                 browsetablemodel.cpp
                 rhythmboxtrackmodel.cpp
+                library/libraryfeature.cpp
+                library/playlistfeature.cpp
+                library/sidebarmodel.cpp
               
                 xmlparse.cpp
                 trackimporter.cpp
