--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -371,17 +371,19 @@ sources = Split("""
 
                 peaklist.cpp
                 rotary.cpp
-                trackcollection.cpp
                 wtracktableview.cpp
                 wtracksourcesview.cpp
-                tracksourcesmodel.cpp
-                librarytablemodel.cpp
-                browsetablemodel.cpp
-                rhythmboxtrackmodel.cpp
-                rhythmboxplaylistmodel.cpp
+                library/trackcollection.cpp
+                library/tracksourcesmodel.cpp
+                library/librarytablemodel.cpp
+                library/browsetablemodel.cpp
+                library/rhythmboxtrackmodel.cpp
+                library/rhythmboxplaylistmodel.cpp
                 library/libraryfeature.cpp
                 library/playlistfeature.cpp
                 library/sidebarmodel.cpp
+                library/libraryscanner.cpp
+                library/libraryscannerdlg.cpp
               
                 xmlparse.cpp
                 parser.cpp
@@ -419,8 +421,6 @@ sources = Split("""
                 recording/writeaudiofile.cpp
                 wtracktablefilter.cpp
                 durationdelegate.cpp
-                libraryscanner.cpp
-                libraryscannerdlg.cpp
                 playerinfo.cpp
                 
                 segmentation.cpp
