--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -374,16 +374,17 @@ sources = Split("""
                 wtracktableview.cpp
                 wtracksourcesview.cpp
                 library/trackcollection.cpp
-                library/tracksourcesmodel.cpp
                 library/librarytablemodel.cpp
                 library/browsetablemodel.cpp
                 library/rhythmboxtrackmodel.cpp
                 library/rhythmboxplaylistmodel.cpp
                 library/libraryfeature.cpp
                 library/playlistfeature.cpp
+                library/rhythmboxfeature.cpp
                 library/sidebarmodel.cpp
                 library/libraryscanner.cpp
                 library/libraryscannerdlg.cpp
+                library/library.cpp
               
                 xmlparse.cpp
                 parser.cpp
