Adding MixxxLibraryFeature -- a feature which provides access to the Mixxx library. Haven't restored the duration delegate yet, that will take some extra thinking.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -379,6 +379,7 @@ sources = Split("""
                 library/rhythmboxtrackmodel.cpp
                 library/rhythmboxplaylistmodel.cpp
                 library/libraryfeature.cpp
+                library/mixxxlibraryfeature.cpp
                 library/playlistfeature.cpp
                 library/rhythmboxfeature.cpp
                 library/sidebarmodel.cpp
