* Created very basic PlaylistTableModel for internal Mixxx playlists * Implemented start of Playlists and PlaylistTracks tables in database * Changed some of the PlaylistFeature code over to start using this model.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -378,6 +378,7 @@ sources = Split("""
                 library/browsetablemodel.cpp
                 library/rhythmboxtrackmodel.cpp
                 library/rhythmboxplaylistmodel.cpp
+                library/playlisttablemodel.cpp
                 library/libraryfeature.cpp
                 library/mixxxlibraryfeature.cpp
                 library/playlistfeature.cpp
