--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -376,6 +376,7 @@ sources = Split("""
                 library/trackcollection.cpp
                 library/librarytablemodel.cpp
                 library/browsetablemodel.cpp
+                library/abstractxmltrackmodel.cpp
                 library/rhythmboxtrackmodel.cpp
                 library/rhythmboxplaylistmodel.cpp
                 library/playlisttablemodel.cpp
