Completely removed WTrackTableView from Mixxx and MixxxApp. Added a WLibrary widget which permits generic view registration from the Library. Changed the way loadTrack signals propagate through the library -- now the WTrackTable emits loadTrack/loadTrackToPlayer signals which the Library catches. The Library then re-emits the same signals. MixxxApp proxies these signals to the Players. Eventually we could pull that out into a PlayerManager or something that holds the logic for picking which deck to load a track into, etc. Cleaned up a lot of the logic in MixxxView for setting up the library / splitter/ table / etc. Added a LibraryView abstract class which all views used by LibraryFeatures should inherit from.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -373,6 +373,8 @@ sources = Split("""
                 rotary.cpp
                 wtracktableview.cpp
                 widget/wlibrarysidebar.cpp
+                widget/wlibrary.cpp
+                library/trackmodel.cpp
                 library/trackcollection.cpp
                 library/librarytablemodel.cpp
                 library/browsetablemodel.cpp
