--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -43,7 +43,7 @@ def getBZRRevision():
 	return os.popen("bzr revno").readline().strip()
 
 def getMixxxVersion():
-	defs = File('#src/defs.h') #have to handle out-of-tree building, that's why the '#' :(
+	defs = File('#src/defs_version.h') #have to handle out-of-tree building, that's why the '#' :(
 	#p = os.popen('grep -m 1 "#define VERSION" %s' % defs) #this is not cross-platform
 	#version = p.readline()
 	#p.close()
@@ -241,7 +241,7 @@ for getenv in ['CXXFLAGS', 'CCFLAGS', 'LINKFLAGS', 'LIBPATH', 'CPPPATH']:
 #env.Append(CPPDEFINES=[('BUILD_REV', '"%s"' % getBZRRevision())]) #doing this forces a rebuild of everything whenever a commit happens -- not much fun
 ## instead, embed BZR version into build
 ## Put version info into a file, so it doesn't force a rebuild of everything :)
-f = open("build.h","w+")
+f = open("build.h","w")
 try:
 	f.write('#define BUILD_REV "' + getBZRRevision() + '"\n')
 finally:
@@ -1239,7 +1239,7 @@ else:
 #env.Append(CPPDEFINES=[('BUILD_FLAGS', "'%s'" % build_flags)])
 
 ### Put flags info into a file
-f = open("build.h","w+")
+f = open("build.h","a")
 try:
 	f.write('#define BUILD_FLAGS "' + build_flags + '"\n')
 finally:
