- Moved MIDI script engine code into midi/ subdirectory as well - Moved --midiDebug command line option parsing into mididevice.cpp, adding midiDebugging() call for use anywhere - Made MIDI message debugging output active for PortMidi (all platforms) - Used --midiDebug option to limit additional verbose output - Got multiple device output working (on Linux at least) but there remains a threading problem (PM is not thread-safe) - Fixed deprecation warning in new code :P

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -1065,7 +1065,7 @@ if int(flags_midiscript):
 	print "MIDI Scripting... enabled"
 
 	build_flags += 'midiscript '
-	sources += Split("""script/midiscriptengine.cpp""")
+	sources += Split("""midi/midiscriptengine.cpp""")
 	env.Append(CPPPATH = '$QTDIR/include/QtScript')
 	env.Append(CPPDEFINES = '__MIDISCRIPT__')
 else:
