Adding the ability for waveform markers to have text labels. Extending the skin XML to allow marker specification via skin instead of hardcoding it. The text color, color, alignment, and control of each marker can be specified in the skin. Updated all skins to use the new marker specification.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -398,6 +398,7 @@ sources = Split("""
                 widget/wwaveformviewer.cpp
                 widget/wglwaveformviewer.cpp
                 waveformviewerfactory.cpp
+                waveform/renderobject.cpp
                 waveform/waveformrenderer.cpp
 		waveform/waveformrenderbackground.cpp
 		waveform/waveformrendersignal.cpp
